# carm-company-profile

./: .env.example  README.md  pyproject.toml
profiles/: carm-visuals.json
src/carm_company_profile/: __init__.py  loader.py  manager.py
src/carm_company_profile/storage/: __init__.py  azure_storage.py  base.py  local_storage.py
tests/: test_local_storage_and_manager.py
